# splice

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  changelog.md  context.md  coupled_inductors_design.md  debug_inductor_test.rs  test_adaptive.cir  test_adaptive_simple.cir  test_controlled_sources.cir  test_controlled_sources.yaml  test_e_source.cir  test_e_source_fixed.cir  test_fixed_simple.cir  test_minimal.cir  test_no_end.cir  test_simple.cir  test_simple_controlled.cir  test_vccs_only.cir  test_vcvs_only.cir
benches/: diode.rs  diode_benchmarks.rs  faer.rs  faer_sparse.rs  hash_map.rs  models.rs  nalgebra.rs  network.rs  performance.rs  real_world.rs  resistor.rs  resistor_benchmarks.rs  rsparse.rs
doc/de/: splice.typ
doc/de/chapters/: ac.typ  build.typ  cover.typ  dc.typ  intro.typ  op.typ  toc.typ
notes/: .$Data.drawio.bkp  .$Splice.drawio.bkp  .$mna.drawio.bkp  Data.drawio  Splice.drawio  network_benchmarks.md  network_docs.md  newton_raphson.sage  nfet.drawio  spice_arch.drawio  style-guide.md  tests.md  todo.md
notes/licenses/: licenses.csv
notes/papers/: links.txt
scripts/: generate_callgraph.py
src/: consts.rs  lib.rs  main.rs  spot.rs
src/backends/: csv.rs  faer.rs  mod.rs  nalgebra.rs  network.rs  plot.rs  raw.rs  rsparse.rs
src/backends/tests/: faer.rs  mod.rs  nalgebra.rs  rsparse.rs
src/frontends/: json.rs  kicad.rs  mod.rs  network.rs  serde.rs  spice.rs  spice_parser_helpers.rs  spice_pest.rs  yaml.rs  yml.rs
src/frontends/pest/: spice.pest
src/frontends/tests/: mod.rs  network_tests.rs  node_units_tests.rs  pest_parser_tests.rs  spice_pest_test.rs  spice_pest_tests.rs  spice_test.rs  tests.rs  yaml_tests.rs
src/models/: complex_pairs.rs  complex_triples.rs  doubles.rs  integration.rs  mod.rs  pairs.rs  tests.rs  triples.rs
src/models/bjt/: bjt0.rs  mod.rs  tests.rs
src/models/capacitor/: mod.rs  serde.rs  (+3 more)
src/obsolete/: spice.rs  spice_test.rs
src/outputs/: csv.rs  mod.rs  network.rs  plot.rs  raw.rs
src/sim/: ac.rs  autotune.rs  commands.rs  dc.rs  mod.rs  op.rs  options.rs  simulation_result.rs  tests.rs  tests_adaptive.rs  tests_step.rs  tran.rs
src/solver/: faer.rs  faer_sparse.rs  mod.rs  nalgebra.rs  rsparse.rs  selector.rs
test/: AC_ANALYSIS_NOTES.md  ac_rc_cutoff.cir  ac_rc_highres.cir  ac_rc_simple.cir  analyze_ac_data.py  analyze_highres.py  bench_gen.py  cap_only.cir  rc_low_freq.cir  rc_op_test.cir  rc_transient_test.cir  rc_transient_test_small_dt.cir  rc_transient_test_tiny_dt.cir  rd-ladder-10k.cir  rd-ladder-20k.cir  rd-ladder-50k-ng.cir  rd-ladder-50k.cir  rd-ladder-ng.cir  rd-ladder.cir  simple.yaml  simple_ac.cir  simple_rc_debug.py  test.cir  test2.cir  test3.cir  test_ac.cir  test_dc.cir  test_dc2.cir  test_dc_mosfet.cir  test_gain.cir  test_inductor_tran.cir  test_op.cir  test_rl_transient.cir  test_rlc_transient.cir  test_simple_inductor.cir  test_step.cir  test_tran.cir  test_tran3.cir  test_tran_2.cir  test_wrong.cir  (+1 more)
(+93 files in other folders)
