[package]
name = "splice"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Tools
derive_more = "0.99.17"
itertools = "0.13.0"
rayon = "1.10.0"
approx = "0.5.1"

# Cli
clap = { version = "4.5.4", features = ["cargo","derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.61"
log = "0.4.21"
simple_logger = "5.0.0"

# Backends
nalgebra = "0.33.0"
rsparse = "1.0.0"
faer = "0.19.1"

# Outputs
plotters = "0.3.6"
num = "0.4.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
assert_float_eq = "1.1.3"

[profile.release]
opt-level = 3
lto = "fat"
strip = "symbols"
panic = "abort"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3
