[package]
name = "splice"
version = "0.4.2"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Tools
itertools = "0.14"
approx = "0.5"
nohash-hasher = "0.2.0"
rustc-hash = "2.1.1"

# Cli
clap = { version = "4.5", features = ["cargo","derive"] }
miette = { version = "7.2.0", features = ["fancy"] } # Diagnostics
thiserror = "2.0"
log = "0.4"
simple_logger = "5.0"

# Frontends/Backends
pest_derive = "2.8"
pest = "2.8"
plotters = "0.3"
num = "0.4.3"

# Solver
nalgebra = "0.33"
rsparse = "1.2"
faer = "0.22"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
assert_float_eq = "1.1.3"
rand = "0.9"

[profile.release]
opt-level = 3
lto = "fat"
#strip = "symbols"
panic = "abort"
debug = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3

[[bench]]
name = "performance"
harness = false