[package]
name = "splice"
version = "0.4.3"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Tools
itertools = "0.14"
approx = "0.5"
nohash-hasher = "0.2"
rustc-hash = "2.1"

# Cli
clap = { version = "4.5", features = ["cargo","derive"] }
miette = { version = "7.6", features = ["fancy"] } # Diagnostics
thiserror = "2.0"
log = "0.4"
simple_logger = "5.0"

# Frontends/Backends
pest_derive = "2.8"
pest = "2.8"
plotters = "0.3"
num = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.*"
serde_json = "1.0"
rmp-serde = "1.1"

# Solver
nalgebra = "0.34"
rsparse = "1.2"
faer = "0.22"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
assert_float_eq = "1.1"
rand = "0.9"
proptest = "1.8"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
#strip = "symbols"
panic = "abort"
debug = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[bench]]
name = "performance"
harness = false

[features]
default = []
faer-in-place = []